--- a/ProjInfo/ProjInfo/ProjInfo.csproj
+++ b/ProjInfo/ProjInfo/ProjInfo.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Restaurant.cs" />
     <Compile Include="Table.cs" />
+    <Compile Include="TableJumelable.cs" />
     <Compile Include="Table_Carre.cs" />
     <Compile Include="Table_Rect.cs" />
     <Compile Include="Table_Ronde.cs" />
