Class Employés + sous-classes

--- a/ProjInfo/ProjInfo/ProjInfo.csproj
+++ b/ProjInfo/ProjInfo/ProjInfo.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cuisinier.cs" />
+    <Compile Include="Employe.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Restaurant.cs" />
+    <Compile Include="Serveur.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="TableJumelable.cs" />
     <Compile Include="Table_Carre.cs" />
